samples/_failures_safe/1761085881_954b2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ab56651.c: In function ‘main’:
./samples/SAFE/__tmp_9ab56651.c:157: error: expected ‘{’ at end of input
